shared/cpaq-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpaq-fleet-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - "example.com"
      secretName: tls-secret
  rules:
    - host: "example.com"
      http:
        paths:
          - backend:
              service:
                name: cpaq-fleet-svc-iis
                port:
                  name: http
            path: /
            pathType: Prefix
